Add help message for Java 19